# temblor

./: .gitignore  02_train_sklearn.ipynb  README.md  default.pyproject.toml  docker-compose.yml  model.pkl  predict.ipynb  pyproject.toml  setup.cfg  train.ipynb  train_ansable.ipynb  train_keras.ipynb  upload.ipynb
datafactory/: cuter.py  generator.py  normalize.py
models/: lasso_model.pkl  linear_model.pkl  ridge_model.pkl
parser/: app.py  config.py  db.py  schemas.py
parser/extractor/: handler.py
parser/repo/: driver.py  handler.py  start.py
planet/: app.py
