[tool.poetry]
name = "обучение в агу"
version = "0.1.0"
description = ""
authors = ["RomanZorkin <zorkin.roman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<=3.10"
ipython = "^8.10.0"
jupyter = "^1.0.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
geopy = "^2.3.0"
pyephem = "^9.99"
ipykernel = "^6.21.2"
matplotlib = "^3.7.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
