[tool.poetry]
name = "temblor"
version = "0.1.0"
description = ""
authors = ["RomanZorkin <zorkin.roman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.10"
ipython = "^8.14.0"
jupyter = "^1.0.0"
numpy = "^1.25.0"
pandas = "^2.0.2"
sklearn = "^0.0.post5"
openpyxl = "^3.1.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
seaborn = "^0.12.2"
geopy = "^2.3.0"
pyephem = "^9.99"
joblib = "^1.2.0"
httpx = "^0.24.1"
sparklines = "^0.4.2"
scikit-learn = "^1.2.2"
pydantic = "^1.10.9"
ipykernel = "^6.23.2"
clickhouse-connect = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
